fixed index view error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include header.ejs %>
 <div class="container">
         <h3>Your Recent Notes</h3>
-        
+         <div class="row">
         <% for(var i=0 ; i < notes.length; i++) {%>
                 <% if ((i % 3==0 ) && (i !=0 )) { %>
         </div>
