removed note body

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,13 @@
             <div class="col col-md-4">
                 <div class="note">
                     <div class="note-title"><%= notes[i].Title %></div>
-                    <hr>
+                    <!--<hr>
                     <div class="note-body">
                     <% var substr = notes[i].demo_text %>
                     
                     <%- substr%> ...</div>
                     <hr>
-                    <a href="editnote/<%=notes[i]._id%>">Edit</a>
+                    <a href="editnote/<%=notes[i]._id%>">Edit</a>-->
                 </div>
             </div>
             <% } %>
