--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
             <% } %>
             <div class="col col-md-4">
                 <div class="note">
-                    <div class="note-title"><%= notes[i].Title %></div>
+                    <div class="note-title"><a href="editnote/<%=notes[i]._id%>"><%= notes[i].Title %></a></div>
                     <!--<hr>
                     <div class="note-body">
                     <% var substr = notes[i].demo_text %>
