--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,7 @@
 
 <head>
     <title>New Note</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../stylesheets/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="../stylesheets/style.css" type="text/css">
     <script src="../javascript/jquery.js"></script>
