--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 
 <head>
     <title>Login</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="stylesheets/login.css" type="text/css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
