--- a/views/editnote.ejs
+++ b/views/editnote.ejs
@@ -1,4 +1,5 @@
 <% include header.ejs %>
+<script src="../javascript/context.js"></script>
  <div class="container">
         <div class="row">
             <div class="col col-md-2"></div>
@@ -34,6 +35,7 @@
         </div>
     </div>
     <script src="../javascript/richeditor.js"></script>
+    <script src="../javascript/contextmenu.js"></script>
 </body>
 
 </html>
