--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,300italic);
-
 .submitbar {
     text-align: right;
     padding-right:10px;
@@ -22,6 +20,18 @@ h2.editable{
   margin: 0;
   min-height: 300px;
   color: #333;
+}
+
+#viewer {
+  display: inline-block;
+  width: 100%;
+  height: 70vh;
+  vertical-align: top;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 20px;
+  background-color: #f6f6f6;
 }
 
 textarea, #editor div {
@@ -53,7 +63,6 @@ code {
 
 
 body {
-  font-family: 'Merriweather', serif;
 }
 
 .note{
