--- a/views/addnote.ejs
+++ b/views/addnote.ejs
@@ -33,8 +33,8 @@
             </div>
         </div>
     </div>
-    <script src="javascript/richeditor.js"></script>
-    <script src="javascript/contextmenu.js"></script>
+    <script src="/javascript/richeditor.js"></script>
+    <script src="/javascript/contextmenu.js"></script>
 </body>
 
 </html>
