--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,12 +3,12 @@
 <head>
     <title>New Note</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../stylesheets/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="../stylesheets/style.css" type="text/css">
-    <script src="../javascript/jquery.js"></script>
-    <script src="../javascript/bootstrap.js"></script>
-    <script src="../javascript/vue.min.js"></script>
-    <script src="../javascript/marked.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
+    <script src="/javascript/jquery.js"></script>
+    <script src="/javascript/bootstrap.js"></script>
+    <script src="/javascript/vue.min.js"></script>
+    <script src="/javascript/marked.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300italic' rel='stylesheet' type='text/css'>
 </head>
 
@@ -28,9 +28,9 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span> Home <span class="sr-only">(current)</span></a>
+                    <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li><a href="/addnote"><span class="glyphicon glyphicon-plus"></span> New</a>
+                    <li><a href="/notes"></span> Notes</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
