--- a/views/newadd.ejs
+++ b/views/newadd.ejs
@@ -19,7 +19,7 @@
          </form>
        </div>
    </div>
-   <script src="javascript/vueeditor.js"></script>
+   <script src="/javascript/vueeditor.js"></script>
 </body>
 
 </html>
