--- a/views/newedit.ejs
+++ b/views/newedit.ejs
@@ -6,21 +6,34 @@
           <input class="form-control" type="text" name="title" placeholder="My new note" value="<%= note.Title %>">
           <hr>
           <div id="editor">
-            <textarea v-model="input" debounce="100" name="content"><%= note.Text %>
-            </textarea>
+            <textarea v-model="input" debounce="100" name="content"><%= note.Text %></textarea>
             <div v-html="input | marked" id="note_content"></div>
           </div>
           <hr>
           <div class="submitbar">
-            <button type="submit" class="btn btn-default submitbutton" id="deletebutton" value="<%=note._id%>">Delete</button>
+            <a href="#delete" class="btn btn-default" id="deletebutton" value="<%=note._id%>" data-toggle="modal">Delete</a>
             <button type="submit" class="btn btn-default submitbutton" id="changebutton">Save</button>
           </div>
         </div>
       </div>
-
     </form>
   </div>
-  <script src="../javascript/vueeditor.js"></script>
+  <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel"><span class="glyphicon glyphicon-trash"></span> Are you sure you want to remove this note?</h4>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal" id="button">No! Take me back.</button>
+            <button type="submit" class="btn btn-danger">Yeah!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="/javascript/vueeditor.js"></script>
   </body>
 
   </html>
